--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Header -->
   <header>
     <div class="profile">
-      <img src="C:/Users/hp/OneDrive/Desktop/portfolio/syon.jpg" alt="syon" width="200">
+      <img src="syon.jpg" alt="syonsajith">
       <h1>syonsajith</h1>
       <span class="tag">Web Developer</span>
     </div>
