--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Name - Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="title" content="Syon Sajith - Portfolio">
+<meta name="description" content="Official portfolio of Syon Sajith. Web Developer, Designer, Programmer.">
+<meta name="keywords" content="Syon Sajith, Sion Sajid, Portfolio, Web Developer, Programmer, Designer">
+<meta name="author" content="Syon Sajith">
 </head>
 <body>
   <!-- Header -->
