--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="description" content="Official portfolio of Syon Sajith. Web Developer, Designer, Programmer.">
 <meta name="keywords" content="Syon Sajith, Sion Sajid, Portfolio, Web Developer, Programmer, Designer">
 <meta name="author" content="Syon Sajith">
+<meta name="google-site-verification" content="E8jYTayKgzSjWTgiIkEiyO5u8z9SgKrjlvBQ4e5DIbs" />
 </head>
 <body>
   <!-- Header -->
