--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your Name - Portfolio</title>
+  <title>syonsajith</title>
   <link rel="stylesheet" href="style.css">
   <meta name="title" content="Syon Sajith - Portfolio">
 <meta name="description" content="Official portfolio of Syon Sajith. Web Developer, Designer, Programmer.">
