--- a/index.html
+++ b/index.html
@@ -3,54 +3,51 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>syonsajith</title>
+  <title>Syon Sajith</title>
   <link rel="stylesheet" href="style.css">
-  <meta name="title" content="Syon Sajith - Portfolio">
-<meta name="description" content="Official portfolio of Syon Sajith. Web Developer, Designer, Programmer.">
-<meta name="keywords" content="Syon Sajith, Sion Sajid, Portfolio, Web Developer, Programmer, Designer">
-<meta name="author" content="Syon Sajith">
-<meta name="google-site-verification" content="E8jYTayKgzSjWTgiIkEiyO5u8z9SgKrjlvBQ4e5DIbs" />
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <div class="profile">
-      <img src="syon.jpg" alt="syonsajith">
-      <h1>syonsajith</h1>
-      <span class="tag">Web Developer</span>
-    </div>
-  </header>
+  <div class="container">
+    <nav>
+      <h2 class="logo">Syon.</h2>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>About Me</h2>
-    <p>
-      I am syon. I am studying in 8th standard at [INDIAN PUBLIC SCHOOL].  
-      I am interested in web designing, programming, editing,gaming,content creation and web development.
-    </p>
-    <p>
-      My dream is to be a famous content creator and grow the gaming community all over the world,iam intreasted in electronics so i need to make a poverty less world,An ai world which use ai for the help of people.Also iam intrested in fashion,Ineed to be a model.
-    </p>
-  </section>
-
-  <!-- What I'm Doing Section -->
-  <section id="hobies">
-    <h2>What I'm Doing</h2>
-    <ul>
-      <li>✔ Web Development</li>
-      <li>✔ Programming</li>
-      <li>✔ Editing</li>
-      <li>✔ Graphic Design</li>
-      <li>✔ gaming</li>
-      <li>✔ content creation</li>
-    </ul>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:syonsajith1@gmail.com">sree.subha15@gmail.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/s.eeeeyy" target="_blank">@s.eeeeyy</a></p>
-  </section>
+    <section class="hero">
+      <div class="hero-text">
+        <h1>Hi, I'm <span>Syon Sajith</span></h1>
+        <h2>Frontend Developer</h2>
+        <h2>Web Developer</h2>
+        <h2>Programmer</h2>
+        <h2>Editor</h2>
+        <h2>Graphic Designer</h2>
+        <h2>gamer</h2>
+        <h2>content creator</h2>
+        <p>
+          I am syon. I am studying in 8th standard at [INDIAN PUBLIC SCHOOL]. I am interested in web designing, programming, editing,gaming,content creation and web development.
+          My dream is to be a famous content creator and grow the gaming community all over the world,iam intreasted in electronics so i need to make a poverty less world,An ai world which                       use ai for the help of people.Also iam intrested in fashion,Ineed to be a model.I build modern and responsive web applications with passion.  
+                 Let’s work together and create something amazing!
+        </p>
+        <div class="buttons">
+          <a href="#" class="btn">Hire Me</a>
+          <a href="#" class="btn secondary">Let's Talk</a>
+        </div>
+        <div class="social">
+          <a href="#">🌐</a>
+          <a href="#">📘</a>
+          <a href="#">💼</a>
+        </div>
+      </div>
+      <div class="hero-img">
+        <img src="syon.jpg" alt="Syon Sajith">
+      </div>
+    </section>
+  </div>
 </body>
 </html>
