--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Syon Sajith",
+  "url": "https://syon sajith.github.io",
+  "image": "https://syon sajith.github.io/logo.png",
+  "sameAs": [
+    "https://www.youtube.com/@syonsajith2012",
+    "https://www.linkedin.com/in/sajith-sayon"
+  ]
+}
+</script>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Syon Sajith</title>
@@ -12,6 +26,7 @@
   <meta name="description" content="Syon Sajith — Frontend Developer, Web Developer, Content Creator. Portfolio and contact." />
   <meta name="author" content="Syon Sajith" />
 
+  <link rel="icon" type="image/png" href="logo.png">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
