--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   "@context": "https://schema.org",
   "@type": "Person",
   "name": "Syon Sajith",
-  "url": "https://syon sajith.github.io",
-  "image": "https://syon sajith.github.io/logo.png",
+  "url": "https://syonsajith.github.io",
+  "logo": "https://syonsajith.github.io/logo.png",
+  "image": "https://syonsajith.github.io/logo.png",
   "sameAs": [
     "https://www.youtube.com/@syonsajith2012",
     "https://www.linkedin.com/in/sajith-sayon"
